--- a/themes/bamboo/source/css/_partial/post.styl
+++ b/themes/bamboo/source/css/_partial/post.styl
@@ -116,6 +116,29 @@
     box-shadow: none;
   }
 
+  .plain-article-asset {
+    margin: 22px 0;
+  }
+
+  .plain-article-asset img:not(.swiper-slide-img) {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+  }
+
+  .plain-article-asset.svgdiagram-asset .image-caption,
+  .image-caption {
+    display: block;
+    margin: 8px auto 0;
+    font-size: 12px;
+    line-height: 1.65;
+    color: #64748b;
+    text-align: center;
+  }
+
   .gallery, .btns, .site-card {
     img {
       margin: 0;
